--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
     <dependency>
       <groupId>org.mapstruct</groupId>
       <artifactId>mapstruct</artifactId>
-      <version>1.5.5.Final</version>  
+      <version>1.6.0.Beta1</version>  
     </dependency>
 	</dependencies>
 	<build>
