--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.raponi</groupId>
 	<artifactId>blog</artifactId>
-	<version>0.2.0</version>
+	<version>0.7.1</version>
 	<name>blog</name>
 	<description>An Blog made with Spring Boot</description>
 	<url/>
@@ -92,6 +92,24 @@
       <artifactId>mapstruct</artifactId>
       <version>1.6.0.Beta1</version>  
     </dependency>
+		<dependency>
+    	<groupId>org.junit.jupiter</groupId>
+    	<artifactId>junit-jupiter</artifactId>
+    	<version>5.10.2</version>
+    	<scope>test</scope>
+  	</dependency>
+  	<dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-core</artifactId>
+    	<version>5.11.0</version>
+    	<scope>test</scope>
+  	</dependency>
+  	<dependency>
+    	<groupId>org.assertj</groupId>
+    	<artifactId>assertj-core</artifactId>
+    	<version>3.25.3</version>
+    	<scope>test</scope>
+  	</dependency>
 	</dependencies>
 	<build>
 		<plugins>
